# chess-bot

./: .clang-format  .gitignore  CMakeLists.txt
include/main/: bitboard.hpp  board.hpp  fen.hpp  hc_evaluation.hpp  logger.hpp  move.hpp  move_generation.hpp  pieces.hpp  search.hpp
include/tests/: move_generation_test.hpp  search_test.hpp
src/main/: bitboard.cpp  board.cpp  fen.cpp  hc_evaluation.cpp  logger.cpp  main.cpp  move.cpp  move_generation.cpp  pieces.cpp  search.cpp
src/tests/: move_generation_test.cpp  run_tests.cpp  search_test.cpp
